# source-prism

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  clippy.toml  docker-compose.yml  rustfmt.toml
crates/ri-api/: AGENTS.md  Cargo.toml
crates/ri-api/assets/: repo_explorer.html
crates/ri-api/assets/repo-explorer/: index.html
crates/ri-api/assets/repo-explorer/assets/: repo-explorer.css  repo-explorer.js
crates/ri-api/src/: context_search.rs  error.rs  graph_call_edges.rs  graph_test_edges.rs  health.rs  impact.rs  lib.rs  local_index.rs  main.rs  rate_limit.rs  refactor.rs  repo_architecture.rs  repo_changed_symbols.rs  repo_coverage.rs  repo_dead_letters.rs  repo_files.rs  repo_graph.rs  repo_index.rs  repo_index_jobs.rs  repo_references.rs  repo_runs.rs  repo_search_drift.rs  repo_search_sync.rs  repo_symbols.rs  repo_test_runs.rs  repo_tests.rs  repos.rs  review.rs  run_jobs.rs  run_outbox.rs  runs.rs  state.rs  test_context.rs  web.rs
crates/ri-api/src/repos/: local.rs
crates/ri-api/src/runs/: tests.rs
crates/ri-api/tests/: bind_addr.rs  context_search.rs  impact.rs  job_cascade.rs  refactor.rs  repo_architecture.rs  repo_changed_symbols.rs  repo_coverage.rs  repo_dead_letters.rs  repo_files.rs  repo_graph.rs  repo_index.rs  repo_index_no_db.rs  repo_overview.rs  repo_references.rs  repo_runs.rs  repo_search_drift.rs  repo_search_sync.rs  repo_symbols.rs  repo_test_context.rs  repo_test_runs.rs  repo_tests.rs  repos.rs  request_limits.rs  review.rs  run_local.rs  run_no_db.rs  runs.rs  test_context.rs  web.rs
crates/ri-api/tests/support/: local_temp_repo.rs  mod.rs
crates/ri-architecture/: Cargo.toml
crates/ri-architecture/src/: lib.rs
crates/ri-architecture/tests/: extract.rs
crates/ri-behavior/: Cargo.toml
crates/ri-behavior/src/: cobertura.rs  go_test_json.rs  jacoco.rs  junit.rs  lcov.rs  lib.rs  playwright_json.rs  pytest_json.rs  test_context.rs  test_context_model.rs
crates/ri-behavior/tests/: cobertura.rs  go_test_json.rs  jacoco.rs  junit.rs  lcov.rs  playwright_json.rs  pytest_json.rs  test_context.rs
crates/ri-cli/: AGENTS.md  Cargo.toml
crates/ri-cli/src/: architecture.rs  changed_symbols.rs  dead_letters.rs  embeddings.rs  error.rs  impact.rs  index.rs  index_args.rs  index_jobs.rs  index_output.rs  main.rs  mcp.rs  mcp_handler.rs  refactor.rs  references.rs  repo_search_drift.rs  repo_search_sync.rs  review.rs  run_jobs.rs  run_outbox.rs  runs.rs  search.rs  search_context.rs  symbols.rs  test_context.rs  test_go.rs  test_junit.rs  test_playwright.rs  test_pytest.rs  tests.rs
crates/ri-cli/tests/: architecture.rs  architecture_persisted.rs  changed_symbols_persisted.rs  cobertura.rs  coverage.rs  dead_letters.rs  embeddings.rs  go_test_json.rs  impact_persisted.rs  index.rs  index_jobs.rs  jacoco.rs  mcp.rs  mcp_persisted.rs  playwright_json.rs  pytest_json.rs  refactor.rs  refactor_persisted.rs  references.rs  references_persisted.rs  repo_search_drift.rs  repo_search_sync.rs  review.rs  run.rs  runs.rs  search_context.rs  search_context_persisted.rs  symbols.rs  symbols_persisted.rs  test_context.rs  test_context_persisted.rs  test_runs.rs
crates/ri-config/: Cargo.toml
crates/ri-config/src/: lib.rs
crates/ri-config/tests/: config.rs
crates/ri-context/: Cargo.toml
crates/ri-context/src/: lib.rs  references.rs
crates/ri-context/tests/: context.rs  references.rs
crates/ri-core/: Cargo.toml
crates/ri-core/src/: evidence.rs  ids.rs  lib.rs  taxonomy.rs
crates/ri-core/tests/: contracts.rs
crates/ri-embedding/: Cargo.toml
crates/ri-embedding/src/: lib.rs  model.rs  store.rs
crates/ri-embedding/tests/: cache.rs
crates/ri-git/: Cargo.toml
crates/ri-git/src/: classification.rs  lib.rs
crates/ri-git/tests/: local_manifest.rs
crates/ri-github/: Cargo.toml
crates/ri-github/src/: lib.rs
crates/ri-github/tests/: dry_run.rs
crates/ri-graph/: Cargo.toml
crates/ri-graph/src/: lib.rs
crates/ri-impact/: Cargo.toml
crates/ri-impact/src/: lib.rs
crates/ri-impact/tests/: impact.rs
crates/ri-indexer/: AGENTS.md  Cargo.toml
crates/ri-indexer/src/: architecture.rs  coverage.rs  file_overlay.rs  generation.rs  generation_files.rs  generation_manifest.rs  graph.rs  graph_calls.rs  graph_ids.rs  graph_import_paths.rs  graph_imports.rs  graph_query.rs  graph_test_covers.rs  lib.rs  overlay.rs  search_chunks.rs  search_drift.rs  search_http.rs  search_http_text.rs  search_sync.rs  search_sync_one.rs  search_sync_types.rs  symbols.rs  test_cases.rs  test_runs.rs
crates/ri-indexer/src/symbols/: codec.rs  store.rs
crates/ri-indexer/src/test_runs/: ids.rs  model.rs  rows.rs  store.rs  write.rs
crates/ri-indexer/tests/: architecture.rs  coverage.rs  generation.rs  graph.rs  graph_calls.rs  overlay.rs  search_drift.rs  search_sync.rs  test_cases.rs  test_runs.rs
crates/ri-mcp/: Cargo.toml
crates/ri-mcp/examples/: catalog.rs
crates/ri-mcp/src/: lib.rs  runtime.rs
crates/ri-mcp/tests/: tools.rs
crates/ri-parser/: Cargo.toml
crates/ri-parser/src/: lib.rs
crates/ri-refactor/: Cargo.toml
crates/ri-refactor/src/: lib.rs
crates/ri-refactor/tests/: plan.rs
crates/ri-review/: Cargo.toml
crates/ri-review/src/: lib.rs  redaction.rs
crates/ri-review/tests/: redaction.rs  verifier.rs
crates/ri-search/: Cargo.toml
crates/ri-search/src/: lib.rs
crates/ri-search/tests/: search.rs
crates/ri-symbols/: Cargo.toml
crates/ri-symbols/src/: diff.rs  lib.rs
crates/ri-symbols/tests/: diff.rs  mapping.rs
crates/ri-tree-sitter/: Cargo.toml
crates/ri-tree-sitter/src/: calls.rs  lib.rs  names.rs  traversal.rs
crates/ri-tree-sitter/tests/: extract.rs
crates/ri-worker/: Cargo.toml
crates/ri-worker/src/: dead_letters.rs  lib.rs  main.rs  memory.rs  model.rs  pg.rs  runtime.rs
crates/ri-worker/tests/: cli.rs  job_runtime.rs
docs/: auth-tenancy.md  remaining-work.md  roadmap.md  security.md
migrations/: 20260611182000_foundation_schema.sql  20260612130000_test_cases.sql  20260612150000_architecture_entities.sql  20260612170000_test_runs.sql  (+5 more)
(+27 files in other folders)
