[workspace]
members = [
    "crates/ri-architecture",
    "crates/ri-api",
    "crates/ri-behavior",
    "crates/ri-cli",
    "crates/ri-config",
    "crates/ri-core",
    "crates/ri-git",
    "crates/ri-graph",
    "crates/ri-impact",
    "crates/ri-indexer",
    "crates/ri-mcp",
    "crates/ri-parser",
    "crates/ri-context",
    "crates/ri-review",
    "crates/ri-search",
    "crates/ri-symbols",
    "crates/ri-tree-sitter",
    "crates/ri-worker",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/tosky1125/source-prism"
readme = "README.md"
keywords = ["code-intel", "repository", "rust"]
categories = ["development-tools"]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "warn"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
unused_must_use = "deny"
elided_lifetimes_in_paths = "warn"
non_ascii_idents = "deny"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"
single_use_lifetimes = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
indexing_slicing = "deny"
mem_forget = "deny"
arithmetic_side_effects = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
as_underscore = "deny"
as_ptr_cast_mut = "deny"
ptr_as_ptr = "warn"
borrow_as_ptr = "warn"
fn_to_numeric_cast_any = "deny"
clone_on_ref_ptr = "warn"
mutex_atomic = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
exit = "warn"
allow_attributes_without_reason = "warn"
dbg_macro = "warn"
print_stderr = "warn"
print_stdout = "warn"
use_debug = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
mod_module_files = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
empty_enums = "warn"
exhaustive_enums = "warn"
exhaustive_structs = "warn"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = "line-tables-only"

[profile.dev]
opt-level = 0
debug = true
incremental = true
codegen-units = 256
split-debuginfo = "unpacked"

[profile.miri]
inherits = "test"
opt-level = 1
overflow-checks = true
