[package]
name = "ri-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Local HTTP API entry point for Source Prism."

[dependencies]
ri-core = { path = "../ri-core" }
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "json", "uuid", "time"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }

[lints]
workspace = true
