[package]
name = "ri-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Local HTTP API entry point for Source Prism."

[dependencies]
ri-architecture = { path = "../ri-architecture" }
ri-behavior = { path = "../ri-behavior" }
ri-context = { path = "../ri-context" }
ri-core = { path = "../ri-core" }
ri-git = { path = "../ri-git" }
ri-impact = { path = "../ri-impact" }
ri-indexer = { path = "../ri-indexer" }
ri-symbols = { path = "../ri-symbols" }
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "json", "uuid", "time"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }

[dev-dependencies]
tower = "0.5"
uuid = { version = "1", features = ["v7"] }

[lints]
workspace = true
