[package]
name = "ri-architecture"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Architecture evidence extraction for Source Prism."

[dependencies]
ri-core = { path = "../ri-core" }
ri-git = { path = "../ri-git" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
