[package]
name = "ri-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Local command-line interface for Source Prism."

[dependencies]
ri-config = { path = "../ri-config" }
ri-context = { path = "../ri-context" }
ri-core = { path = "../ri-core" }
ri-git = { path = "../ri-git" }
ri-impact = { path = "../ri-impact" }
ri-indexer = { path = "../ri-indexer" }
ri-parser = { path = "../ri-parser" }
ri-symbols = { path = "../ri-symbols" }
ri-tree-sitter = { path = "../ri-tree-sitter" }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "json", "uuid", "time"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
