[package]
name = "ri-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Local command-line interface for Source Prism."

[dependencies]
ri-architecture = { path = "../ri-architecture" }
ri-behavior = { path = "../ri-behavior" }
ri-config = { path = "../ri-config" }
ri-context = { path = "../ri-context" }
ri-core = { path = "../ri-core" }
ri-embedding = { path = "../ri-embedding" }
ri-git = { path = "../ri-git" }
ri-github = { path = "../ri-github" }
ri-gitlab = { path = "../ri-gitlab" }
ri-impact = { path = "../ri-impact" }
ri-indexer = { path = "../ri-indexer" }
ri-mcp = { path = "../ri-mcp" }
ri-parser = { path = "../ri-parser" }
ri-review = { path = "../ri-review" }
ri-refactor = { path = "../ri-refactor" }
ri-symbols = { path = "../ri-symbols" }
ri-tree-sitter = { path = "../ri-tree-sitter" }
ri-worker = { path = "../ri-worker" }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "json", "uuid", "time"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v7"] }

[lints]
workspace = true
