[package]
name = "ri-config"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Runtime configuration boundary for Source Prism."

[dependencies]
ri-core = { path = "../ri-core" }

[lints]
workspace = true
