[package]
name = "ri-config"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Runtime configuration boundary for Source Prism."

[dependencies]
ri-core = { path = "../ri-core" }
thiserror = "2"
url = "2"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
