[package]
name = "ri-context"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Evidence-bound context packs for Source Prism."

[dependencies]
ri-impact = { path = "../ri-impact" }
ri-search = { path = "../ri-search" }
ri-symbols = { path = "../ri-symbols" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
ri-core = { path = "../ri-core" }

[lints]
workspace = true
