[package]
name = "ri-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Shared foundation contracts for Source Prism."

[lints]
workspace = true

[dependencies]
hex = "0.4"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
serde_json = "1"
