[package]
name = "ri-git"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Git snapshot and manifest boundary for Source Prism."

[dependencies]
gix = { version = "0.73.0", default-features = false, features = ["max-performance-safe"] }
ri-core = { path = "../ri-core" }
sha2 = "0.10.9"
thiserror = "2.0.12"

[dev-dependencies]
tempfile = "3.20.0"

[lints]
workspace = true
