[package]
name = "ri-graph"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Graph projection primitives for Source Prism."

[dependencies]
ri-core = { path = "../ri-core" }
ri-symbols = { path = "../ri-symbols" }
serde = { version = "1", features = ["derive"] }

[lints]
workspace = true
