[package]
name = "ri-indexer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Incremental indexing boundary for Source Prism."

[dependencies]
ri-core = { path = "../ri-core" }
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "json", "uuid", "time"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v7"] }

[lints]
workspace = true
