[package]
name = "ri-parser"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Parser orchestration traits for Source Prism."

[dependencies]
ri-core = { path = "../ri-core" }
ri-symbols = { path = "../ri-symbols" }
thiserror = "2"

[lints]
workspace = true
