[package]
name = "ri-refactor"
version = "0.1.0"
description = "Refactor planning contracts for Source Prism."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ri-impact = { path = "../ri-impact" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
ri-core = { path = "../ri-core" }
ri-symbols = { path = "../ri-symbols" }

[lints]
workspace = true
