[package]
name = "ri-worker"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Worker runtime entry point for Source Prism."

[dependencies]
ri-core = { path = "../ri-core" }
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "json", "uuid", "time"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["v7"] }

[lints]
workspace = true
